<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/main"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_record"
        android:icon="@drawable/record"
        android:title="@string/title_record" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/location"
        android:title="@string/title_map" />
    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/bill"
        android:title="@string/title_list" />
    <item
        android:id="@+id/navigation_member"
        android:icon="@drawable/member"
        android:title="@string/title_member" />

</menu>
